# A_Maze_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  mazegen-1.0.0-py3-none-any.whl  mazetest.txt  pyproject.toml  requirements.txt
play/: config.txt  enemy.py  ennemy.py  launch.py
src/maze/: README.md  __init__.py  generator.py  maze_config.py  maze_customization.py  maze_errors.py  maze_fortytwo_pattern.py  maze_generator.py  maze_solver.py
src/maze/algorithms/: __init__.py  backtracking.py  hunt_and_kill.py
src/maze/output/: __init__.py  maze_output.py
src/utils/: config.py  custom_errors.py  modules_check.py
utils/: check_config.py
validator/: output_validator.py
